# kwf_contracts

./: CHANGELOG.md  README.md  _CoqProject  dune-project  pruvendo-kw-project.opam  pruvendo.recompile
Solidity/: Blank.abi.json  Blank.sol  Blank.tvc  FromGiver.abi.json  FromGiver.sol  FromGiver.tvc  IBlank.sol  IKWFund.sol  IKWFundParticipant.sol  KWDPool.abi.json  KWDPool.sol  KWDPool.tvc  KWErrorConstants.sol  KWMessagesConstants.sol  PseudoFund.abi.json  PseudoFund.sol  PseudoFund.tvc  README.md  blank_deploy.sh  blank_deployFG.sh  blank_setFromGiverCode.sh  blank_setKWDPoolCode.sh  compile_all.sh  filters.json  foo.sh  kwdpool_deploy.sh  scenario1.sh  scenario1Voting.sh  scenario1_twoBlank.sh  scenario2.sh  scenario2Voting.sh  scenario2_alternative.sh  scenario2_twoBlank.sh  scenario2_twoBlank_add.sh  scenario3Voting.sh  test.sh
_ref.sol/17.01.2022/: Blank.abi.json  Blank.code  Blank.sol  FromGiver.abi.json  FromGiver.code  FromGiver.sol  IBlank.sol  IKWFundParticipant.sol  KWDPool.abi.json  KWDPool.code  KWDPool.sol
_ref.sol/22.01.2022/: Blank.abi.json  Blank.sol  Blank.tvc  FromGiver.sol  FromGiver.tvc  IBlank.sol  IKWDpool.sol  IKWFundParticipant.sol  KWDPool.abi.json  KWDPool.sol  KWDPool.tvc
_ref.sol/old/: IBlank.sol  IFromGiver.sol  IKWDPool.sol  blank.sol  fromgiver.sol  kwdpool.sol
off-chain/: conftest.py  demo.py  fetch.py  filters.json  test_blank.py
off-chain/contracts/: __init__.py  blank.py  from_giver.py  test_contract.py  (+2 more)
src/: dune
term-printing-tests/: Constructor.v  proof.trm
ts4-tests/: constants.py  requirements.txt  test.py
(+89 files in other folders)
